--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
         <div class="game-info"><h2>Amhooman Games</h2><p>Browser • Multi-game arcade</p></div>
       </a>
 
-      <a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
-        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1211.jpeg');"></div>
-        <div class="game-info"><h2>BitLife</h2><p>Life Simulator • Decisions</p></div>
+      $0
+
+      <a class="game-card" href="https://codingiscool464.github.io/AwesomeTanks2/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1225.png');"></div>
+        <div class="game-info"><h2>Awesome Tanks 2</h2><p>Tanks • Shooter • Upgrades</p></div>
       </a>
 
       <a class="game-card" href="https://codingiscool464.github.io/eggycar/" target="_blank">
@@ -85,10 +87,12 @@
         <div class="game-info"><h2>FNAF 2</h2><p>Horror • Survival</p></div>
       </a>
 
-      <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
-        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
-        <div class="game-info"><h2>PolyTrack</h2><p>Racing • Skill • Browser</p></div>
+      <a class="game-card" href="https://codingiscool464.github.io/OvO/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1226.png');"></div>
+        <div class="game-info"><h2>OvO</h2><p>Parkour • Momentum</p></div>
       </a>
+
+$0
 
       <a class="game-card" href="https://codingiscool464.github.io/ragdoll-archers/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1215.webp');"></div>
