--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <input id="search" type="text" placeholder="Search for a game…" aria-label="Search games">
 
     <div id="game-list">
+
+      <!-- A -->
       <a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1209.png');"></div>
         <div class="game-info"><h2>A Small World Cup</h2><p>Physics • Soccer • Funny</p></div>
@@ -70,11 +72,19 @@
         <div class="game-info"><h2>Awesome Tanks 2</h2><p>Tanks • Shooter • Upgrades</p></div>
       </a>
 
+      <!-- B -->
+      <a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1211.jpeg');"></div>
+        <div class="game-info"><h2>BitLife</h2><p>Life Simulator</p></div>
+      </a>
+
+      <!-- E -->
       <a class="game-card" href="https://codingiscool464.github.io/eggycar/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1212.jpeg');"></div>
         <div class="game-info"><h2>Eggy Car</h2><p>Car • Hill Climb • Balance</p></div>
       </a>
 
+      <!-- F -->
       <a class="game-card" href="https://codingiscool464.github.io/fnaf/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1213.jpeg');"></div>
         <div class="game-info"><h2>FNAF 1</h2><p>Horror • Cameras • Survive</p></div>
@@ -85,11 +95,24 @@
         <div class="game-info"><h2>FNAF 2</h2><p>Horror • Survival</p></div>
       </a>
 
+      <a class="game-card" href="https://codingiscool464.github.io/FNAF3/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1233.webp');"></div>
+        <div class="game-info"><h2>FNAF 3</h2><p>Horror • Springtrap</p></div>
+      </a>
+
+      <!-- O -->
       <a class="game-card" href="https://codingiscool464.github.io/OvO/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1226.png');"></div>
         <div class="game-info"><h2>OvO</h2><p>Parkour • Momentum</p></div>
       </a>
 
+      <!-- P -->
+      <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
+        <div class="game-info"><h2>PolyTrack</h2><p>Racing • Fast • Flow</p></div>
+      </a>
+
+      <!-- R -->
       <a class="game-card" href="https://codingiscool464.github.io/ragdoll-archers/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1215.webp');"></div>
         <div class="game-info"><h2>Ragdoll Archers</h2><p>Bow Combat • Physics</p></div>
