--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
         <div class="game-info"><h2>FNAF 3</h2><p>Horror • Springtrap</p></div>
       </a>
 
+      <a class="game-card" href="https://codingiscool464.github.io/FNAF4/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1235.webp');"></div>
+        <div class="game-info"><h2>FNAF 4</h2><p>Horror • Fear • Nightmares</p></div>
+      </a>
+
+      <!-- Monkey Mart -->
+      <a class="game-card" href="https://codingiscool464.github.io/MonkeyMart/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1234.jpeg');"></div>
+        <div class="game-info"><h2>Monkey Mart</h2><p>Shop • Clicker • Fun</p></div>
+      </a>
+
       <!-- O -->
       <a class="game-card" href="https://codingiscool464.github.io/OvO/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1226.png');"></div>
