--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ const cards = document.querySelectorAll(".game-card");
 // Create secret card (hidden initially)
 const secretCard = document.createElement("a");
 secretCard.className = "game-card";
-secretCard.href = "https://github.com/codingiscool464"; // admin redirect
+secretCard.href = "https://codingiscool464.github.io/adminiscool464"; // admin redirect
 secretCard.target = "_blank";
 secretCard.style.display = "none";
 secretCard.innerHTML = `
