--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ secretCard.target = "_blank";
 secretCard.style.display = "none";
 secretCard.innerHTML = `
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1236.webp');"></div>
-  <div class="game-info"><h2>Admin Source Code</h2><p>Secret • Code Access</p></div>
+  <div class="game-info"><h2>Admin Panel</h2><p>Secret • Admin Control</p></div>
 `;
 document.getElementById("game-list").appendChild(secretCard);
 
