--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ secretCard.href = "https://codingiscool464.github.io/adminiscool464"; // admin r
 secretCard.target = "_blank";
 secretCard.style.display = "none";
 secretCard.innerHTML = `
-  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1236.webp');"></div>
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1237.png');"></div>
   <div class="game-info"><h2>Admin Panel</h2><p>Secret • Admin Control</p></div>
 `;
 document.getElementById("game-list").appendChild(secretCard);
