--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       background:var(--bg); color:var(--text);
       display:flex; justify-content:center; align-items:flex-start;
       min-height:100vh; padding:40px 20px;
+      position:relative;
     }
     .container{width:100%;max-width:800px; animation:fadeIn 0.8s ease}
     h1{font-size:2.8rem;text-align:center;margin-bottom:8px;color:var(--accent)}
@@ -44,10 +45,31 @@
       transition: none !important; animation: none !important; opacity:1 !important; transform:none !important; box-shadow:none !important;
     }
 
+    .suggestions-link {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+      background: #1a1f27;
+      padding: 6px 12px;
+      border-radius: 6px;
+      transition: 0.25s ease;
+    }
+    .suggestions-link:hover {
+      background: #232933;
+      box-shadow: 0 0 10px rgba(0,209,255,0.4);
+    }
+
     @keyframes fadeIn{ from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:translateY(0)} }
   </style>
 </head>
 <body>
+  <!-- Suggestions link -->
+  <a class="suggestions-link" href="https://codingiscool464.github.io/suggestionform/" target="_blank">Suggestions</a>
+
   <div class="container" id="container">
     <h1>Game Launcher</h1>
     <p class="header-sub">Click a game to play!</p>
@@ -84,7 +106,7 @@
         <div class="game-info"><h2>Eggy Car</h2><p>Car • Hill Climb • Balance</p></div>
       </a>
 
-      <!-- FNAF Series -->
+      <!-- F -->
       <a class="game-card" href="https://codingiscool464.github.io/fnaf/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1213.jpeg');"></div>
         <div class="game-info"><h2>FNAF 1</h2><p>Horror • Cameras • Survive</p></div>
@@ -102,13 +124,13 @@
 
       <a class="game-card" href="https://codingiscool464.github.io/FNAF4/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1235.webp');"></div>
-        <div class="game-info"><h2>FNAF 4</h2><p>Horror • Nightmares</p></div>
+        <div class="game-info"><h2>FNAF 4</h2><p>Horror • Nightmare</p></div>
       </a>
 
-      <!-- Monkey Mart -->
+      <!-- M -->
       <a class="game-card" href="https://codingiscool464.github.io/MonkeyMart/" target="_blank">
-        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1234.jpeg');"></div>
-        <div class="game-info"><h2>Monkey Mart</h2><p>Shopping • Fun • Arcade</p></div>
+        <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1234.jpeg?raw=true');"></div>
+        <div class="game-info"><h2>Monkey Mart</h2><p>Shopping • Fun</p></div>
       </a>
 
       <!-- O -->
@@ -142,43 +164,34 @@ const search = document.getElementById("search");
 const container = document.getElementById("container");
 const cards = document.querySelectorAll(".game-card");
 
-// Create secret card (hidden initially)
-const secretCard = document.createElement("a");
-secretCard.className = "game-card";
-secretCard.href = "https://codingiscool464.github.io/adminiscool464"; // admin redirect
-secretCard.target = "_blank";
-secretCard.style.display = "none";
-secretCard.innerHTML = `
-  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1237.png');"></div>
-  <div class="game-info"><h2>Admin Panel</h2><p>Secret • Admin Control</p></div>
-`;
-document.getElementById("game-list").appendChild(secretCard);
-
-// Reveal secret card when "adminiscool464" is typed and Enter pressed
-search.addEventListener("keypress", (e) => {
-  if(e.key === "Enter") {
-    const value = search.value.toLowerCase();
-    if(value === "adminiscool464"){
-      secretCard.style.display = "flex";
-      search.value = "";
-    }
-  }
-});
-
-// Search filtering
 search.addEventListener("input", () => {
   const value = search.value.toLowerCase();
-
-  if(value){ 
-    container.classList.add("no-anim"); 
-  } else { 
-    container.classList.remove("no-anim"); 
-  }
+  if(value){ container.classList.add("no-anim"); }
+  else{ container.classList.remove("no-anim"); }
 
   cards.forEach(card =>{
     const text = card.innerText.toLowerCase();
     card.style.display = text.includes(value) ? "flex" : "none";
   });
+
+  // Secret admin card
+  const adminText = "adminiscool464";
+  const existingAdmin = document.getElementById("admin-card");
+  if(value === adminText && !existingAdmin){
+    const adminCard = document.createElement("a");
+    adminCard.href = "https://codingiscool464.github.io/adminpage.html";
+    adminCard.target = "_blank";
+    adminCard.id = "admin-card";
+    adminCard.className = "game-card";
+    adminCard.innerHTML = `
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
+      <div class="game-info"><h2>Admin Source Code</h2><p>Secret • Hidden</p></div>
+    `;
+    document.getElementById("game-list").appendChild(adminCard);
+  }
+  if(value !== adminText && existingAdmin){
+    existingAdmin.remove();
+  }
 });
 </script>
 </body>
