--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ search.addEventListener("input", () => {
   const existingAdmin = document.getElementById("admin-card");
   if(value === adminText && !existingAdmin){
     const adminCard = document.createElement("a");
-    adminCard.href = "https://codingiscool464.github.io/adminpage.html";
+    adminCard.href = "https://codingiscool464.github.io/adminiscool464";
     adminCard.target = "_blank";
     adminCard.id = "admin-card";
     adminCard.className = "game-card";
