--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ search.addEventListener("keydown", (e) => {
       adminCard.className = "game-card";
       adminCard.innerHTML = `
         <div class="game-thumb" style="background-image:url('http://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1237.png');"></div>
-        <div class="game-info"><h2>Admin Source Code</h2><p>Secret • Hidden</p></div>
+        <div class="game-info"><h2>Admin Panel</h2><p>Secret • Hidden</p></div>
       `;
       document.getElementById("game-list").appendChild(adminCard);
     }
