--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
       </a>
 
       <!-- S -->
+      <a class="game-card" href="https://codingiscool464.github.io/slope/" target="_blank">
+        <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1240.png?raw=true');"></div>
+        <div class="game-info"><h2>Slope</h2><p>Fast • Reaction • Skill</p></div>
+      </a>
+
       <a class="game-card" href="https://codingiscool464.github.io/SubwaySurfers/" target="_blank">
         <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1239.png?raw=true');"></div>
         <div class="game-info"><h2>Subway Surfers</h2><p>Runner • Dodge • Fast</p></div>
