Add game cards for Drift Boss and Drive Mad
Added new game cards for Drift Boss and Drive Mad.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
         <div class="game-info"><h2>BitLife</h2><p>Life Simulator</p></div>
       </a>
 
+      <!-- D -->
+      <a class="game-card" href="https://codingiscool464.github.io/DriftBoss/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1243.png');"></div>
+        <div class="game-info"><h2>Drift Boss</h2><p>Car • Casual • One-Button</p></div>
+      </a>
+
+      <a class="game-card" href="https://codingiscool464.github.io/DriveMad/" target="_blank">
+        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1244.jpeg');"></div>
+        <div class="game-info"><h2>Drive Mad</h2><p>Funny • Skill • Precision</p></div>
+      </a>
+
       <!-- E -->
       <a class="game-card" href="https://codingiscool464.github.io/eggycar/" target="_blank">
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1212.jpeg');"></div>
